# zmk-nano2test

./: README.md  build.yaml
app/drivers/display/: Kconfig.bak
boards/shields/display-128/: CMakeLists.txt  Kconfig.defconfig  Kconfig.shield  display_128.conf  display_128.zmk.yml
boards/shields/display-128/bak/: battery_status_c
boards/shields/display-128/widgets/: battery_status_sym.c  central_status.c  central_status.h  central_status_c  layer_status_sym.c  modifiers_sym.c  output_status_sym.c  peripheral_status.c  peripheral_status_c  util.c  util.h
boards/shields/nano_v2_test/: CMakeLists.txt  Kconfig.defconfig  nano_v2_test.dtsi  nano_v2_test.overlay
config/: nano_v2_test.conf  west.yml
drivers/display/: CMakeLists.txt  Kconfig  gc9a01a.h
include/app/drivers/display/: display_gc9a01a.c
modules/drivers/display/: CMakeLists.txt  Kconfig.gc9a01a
modules/dts/bindings/display/: waveshare,gc9a01a.yaml
zephyr/include/zephyr/dt-bindings/display/: gc9a01a.h
